
AC_INIT([mockcpp], [2.0], [darwin.yuan@gmail.com])
AC_CONFIG_SRCDIR([src/Any.cpp])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_PROG_LIBTOOL
AC_PROG_CXX
AC_CONFIG_FILES([
  Makefile
  src/Makefile
  libs/Makefile
  ut/Makefile
  ft/Makefile
  samples/cpp/Makefile
  samples/cpp/src/Makefile
  samples/cpp/ut/Makefile
])
AC_OUTPUT
