
AM_CPPFLAGS = -I$(top_builddir)/include -I$(top_builddir)/3rdparty

lib_LTLIBRARIES = libmockcpp.la

libmockcpp_la_SOURCES = \
 AfterMatcher.cpp \
 AnyBase.cpp \
 Any.cpp \
 Asserter.cpp \
 AssertionFailedError.cpp \
 BeforeMatcher.cpp \
 CallerMatcher.cpp \
 ChainableMockMethodCore.cpp \
 ChainableMockMethodWithName.cpp \
 ChainableMockObject.cpp \
 ChainingMockHelper.cpp \
 ConstraintSet.cpp \
 DecoratedConstraint.cpp \
 DefaultMatcher.cpp \
 DefaultStub.cpp \
 Exception.cpp \
 ExpectsMatcher.cpp \
 Formatter.cpp \
 GlobalMockObject.cpp \
 IdentityBuilder.cpp \
 IgnoreResultHandler.cpp \
 IgnoreResultHandlerFactory.cpp \
 IgnoreReturnStub.cpp \
 Invocation.cpp \
 InvocationId.cpp \
 InvocationMocker.cpp \
 InvocationMockerSet.cpp \
 InvocationTimesMatcher.cpp \
 InvokedAtLeast.cpp \
 InvokedAtMost.cpp \
 InvokedExactly.cpp \
 InvokedOnce.cpp \
 InvokedTimesMatcher.cpp \
 IsAnythingHelper.cpp \
 MismatchResultHandler.cpp \
 MismatchResultHandlerFactory.cpp \
 NormalResultHandler.cpp \
 NormalResultHandlerFactory.cpp \
 InvocationMockBuilderGetter.cpp \
 OutBoundPointer.cpp \
 PendingMatcher.cpp \
 ProcStub.cpp \
 RefAny.cpp \
 Result.cpp \
 ReturnObjectList.cpp \
 ReturnStub.cpp \
 SimpleInvocationRecorder.cpp \
 StubsMatcher.cpp \
 TestFailureMatcher.cpp \
 TypelessConstraintAdapter.cpp \
 TypelessStubAdapter.cpp \
 TypeString.cpp \
 VoidResultHandler.cpp \
 VoidResultHandlerFactory.cpp \
 WillStub.cpp 
